# senzey-bots

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  alembic.ini  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
src/senzey_bots/: __init__.py  app.py  pyproject.toml
src/senzey_bots/core/errors/: __init__.py  domain_errors.py  error_codes.py
src/senzey_bots/core/events/: __init__.py  buffer.py  correlation.py  masking.py  models.py  payloads.py  publisher.py
src/senzey_bots/core/orchestrator/: __init__.py  contracts.py
src/senzey_bots/core/strategy/: __init__.py  generation_events.py  validator.py
src/senzey_bots/database/: base.py  engine.py
src/senzey_bots/database/migrations/: env.py
src/senzey_bots/database/migrations/versions/: 29136f6d035f_add_strategies_table.py  6acd432aa9a7_add_agent_runs_table.py  d02486ca3209_baseline_auth_and_secrets.py
src/senzey_bots/database/models/: __init__.py  agent_run.py  auth_config.py  secret_metadata.py  strategy.py
src/senzey_bots/database/repositories/: agent_run_repo.py  strategy_repo.py
src/senzey_bots/integrations/freqtrade/: __init__.py
src/senzey_bots/integrations/ig/: __init__.py
src/senzey_bots/integrations/notifications/: __init__.py
src/senzey_bots/security/: auth_service.py  crypto_service.py  password_hasher.py  secrets_store.py
src/senzey_bots/shared/: clock.py  config_loader.py  logger.py
src/senzey_bots/ui/: main.py
src/senzey_bots/ui/components/: agent_flow.py
src/senzey_bots/ui/pages/: 10_generate.py
(+78 files in other folders)
